--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ img {
     border-radius: 10px;
 }
 
+.pic:hover {
+    transform: scale(1.05);
+    transform: 10s ease;
+}
+
 .button {
     margin-top: 5px;
     padding: 10px 20px;
@@ -55,7 +60,7 @@ img {
 .button:hover {
     text-decoration: none;
     transform: scale(1.05);
-    transform 0.6s ease;
+    transform: 0.6s ease;
 }
 
 .title {
